# Backend-TIC-2023-GMC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-old.yml  docker-compose.yml  init.sh  initial_data_script.py  pyproject.toml  render.yaml  runtime.txt
.github/workflows/: devDeployment.yml  devWorkFlow.yml
app/: main.py
docker-backend/: Dockerfile
src/Game/Application/: GetAllGamesUseCase.py
src/Game/Domain/: Game.py  GameFactory.py  GameInfo.py  GameRepository.py
src/Game/Infraestructure/: FastAPIGameController.py  MongoDBGameRepository.py
src/Interaction/: Interaction.py  InteractionFactory.py
src/Interaction/Domain/: Interaction.py  InteractionFactory.py
src/Match/Domain/: Match.py  MatchFactory.py
src/Organization/Application/: GetOrganizationUseCase.py
src/Organization/Domain/: Organization.py  OrganizationFactory.py  OrganizationRepository.py  SocialMedia.py
src/Organization/Infraestructure/: FastAPIOrganizationController.py  FastAPIOrgazanizationController.py  MongoDBOrganizationRepository.py
src/Parish/Application/: ListParishesUseCase.py
src/Parish/Domain/: Parish.py  ParishRepository.py
src/Parish/Infrastructure/: FastAPIParishController.py  MongoDBParishRepository.py  ParishFastAPIController.py
src/Photo/Application/: SavePhotoUseCase.py
src/Photo/Domain/: Photo.py  PhotoFactory.py  PhotoRepository.py
src/Publication/: Publication.py  PublicationFactory.py  PublicationRepository.py
src/Publication/Domain/: Publication.py  (+2 more)
src/Shared/: Model.py  MongoClient.py  api.py  auth.py  ic.py
test/: main.py
(+101 files in other folders)
