[tool.poetry]
name = "backend-tic-2023-gmc"
version = "0.1.0"
description = ""
authors = ["Gandhy <gandhy.garcia@epn.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
