[tool.poetry]
name = "backend-tic-2023-gmc"
version = "0.1.0"
description = ""
authors = ["Gandhy <gandhy.garcia@epn.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
black = "^23.3.0"
uvicorn = "^0.22.0"
pymongo = "^4.4.1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pyrebase4 = "^4.7.1"
inject = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
